--- a/system.html
+++ b/system.html
@@ -9,23 +9,18 @@
     <title>Portabraille Printer!</title>
 </head>
 
-<div id="blog-hello-box" class="ai2html" style="width:100%">
-	<div id="blog-hello" class="artboard" style="max-width:100%;max-height: 2028px" data-aspect-ratio="0.595" data-min-width="0">
+<div id="resources-box" class="ai2html" style="width:100%">
+	<div id="resources" class="artboard" style="max-width:100%;max-height:2018px" data-aspect-ratio="0.598" data-min-width="0">
 
 		<div class="header blue1"></div>
-		<div style="padding: 0 0 1768px 0;"></div>
+		<div style="padding: 0 0 1755px 0;"></div>
 		<div class="footer blue1"> </div>
 
 		<a href="https://maiam6242.github.io/braille-printer/">
-		    <img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
-    </a>
+				<img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
+		</a>
 
-		<div class="circle450 blue3" style="left:7%;top:40%"></div>
-    <div class="circle250 blue1" style="left:7%;top:25%"></div>
-    <div class="circle675 blue2" style="right:7%;top:25%"></div>
-    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:27%"></div>
-
-		<div class="dotdotdot" style="top:21.7%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:22%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,7 +28,12 @@
       <div class="dot"></div>
     </div>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:850px;width:81px;">
+    <div class="circle450 blue3" style="left:55%;top:33.5%"></div>
+    <div class="circle250 blue1" style="left:72%;top:26.5%"></div>
+    <div class="circle675 blue2" style="left:10%;top:26.5%"></div>
+    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:28.5%"></div>
+
+    <div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:850px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:730px;width:73px;">
@@ -65,40 +65,32 @@
       <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:12.6701%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
-			<p class="date">10/17/19</p>
-			<p class="title">Hello!</p>
-		</div>
-		<div class="Layer_1 aiAbs" style="top:65.0831%;left:10.3064%;width:79.2046%;">
-			<p class="content">Hello from all of us!</p>
-			<p>&nbsp;</p>
-			<p class="content">This is the start of an adventure! Tonight, we met to finalize our sprint one objectives and plot a course for the next week. Our project is to create a portable braille printer! This sprint, our main objective is to get a machine that punches dimples in paper effectively. We are super excited to get started and will keep you in the loop as we continue!</p>
-			<p>&nbsp;</p>
-			<p class="content">Love,</p>
-			<p class="content">The PoE Team</p>
+		<div class="Layer_1 aiAbs" style="top:13.3775%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
+			<p class="pstyle0">Read on for a more detailed system overview of</p>
+      <p class="pstyle0">the Portabraille Printer!</p>
 		</div>
 
-		<div style="position:absolute;top:88.7%;left:50%;margin-left:-200px">
-			<a style="text-decoration:none" class="blogbtn" href="https://maiam6242.github.io/braille-printer/blog.html">back to blog city!</a>
-		</div>
+    <div class="Layer_1 aiAbs" style="top:65%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
+      <p class="pstyle1">stuff about the system overview blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blahv blah blah blah blah blah blah blah blah blah</p>
+    </div>
 
-		<div style="width:1000px;left:50%;margin-left:-500px">
-  		<div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:9.4243%;width:81px;">
+    <div style="width:1000px;left:50%;margin-left:-500px">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:9.4243%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
   		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:22%;width:81px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:22%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:40%;width:73px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:40%;width:73px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:54%;width:160px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:54%;width:160px;">
         	<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:68%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:68%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:1988px;margin-top:-17.5px;left:85%;width:110px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:1975px;margin-top:-17.5px;left:85%;width:110px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
   		</div>
     </div>
