--- a/index.html
+++ b/index.html
@@ -69,17 +69,23 @@
       <div class="dot"></div>
     </div>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:36.5706%;width:81px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:47.0833%;width:73px;">
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:850px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
 		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:57.1787%;width:160px;">
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:730px;width:73px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
-		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:73.6791%;width:110px;">
-			<a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+    <div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:440px;width:160px;">
+      <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
+      <div class="dropdown-content blue2" style="left:-10px; top:40px">
+        <a href="#">mechanical</a>
+        <a href="#">electrical</a>
+        <a href="#">firmware</a>
+        <a href="#">software</a>
+      </div>
+		</div>
+		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:280px;width:160px;">
+      <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
       <div class="dropdown-content blue2" style="left:-10px; top:40px">
         <a href="#">sprint 1</a>
         <a href="#">sprint 2</a>
@@ -87,9 +93,12 @@
         <a href="#">sprint 4</a>
         <a href="#">budget</a>
       </div>
-  	</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;left:86.3531%;width:133px;">
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:175px;width:110px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
+  	</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:-20px;width:133px;">
+      <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
 		</div>
 
 		<div class="Layer_1 aiAbs" style="top:5.9985%;left:50%;margin-left:-32.6429%;width:65.2858%;">
@@ -124,20 +133,25 @@
 			<p class="pstyle5">*insert thank-yous/credits*</p>
 		</div>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:9.4243%;width:81px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:26.6748%;width:73px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:43.4786%;width:160px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:82.5611%;width:133px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:65.5309%;width:110px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
-		</div>
+    <div style="width:1000px;left:50%;margin-left:-500px">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:9.4243%;width:81px;">
+  			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
+  		</div>
+      <div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:22%;width:81px;">
+  			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
+  		</div>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:40%;width:73px;">
+        <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
+  		</div>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:54%;width:160px;">
+        	<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+  		</div>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:68%;width:133px;">
+        <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
+  		</div>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:85%;width:110px;">
+        <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/team.html">team</a>
+  		</div>
+    </div>
 	</div>
 </div>
