changing tabs and fixing homepage formatting

--- a/index.html
+++ b/index.html
@@ -20,12 +20,12 @@
 		    <img class="logo" alt="Portabraille Printer Logo" src="Website Graphics\Logo.png"/>
     </a>
 
-    <div class="circle450 blue3" style="left:55%;top:17%"></div>
-    <div class="circle250 blue1" style="left:72%;top:10%"></div>
-    <div class="circle675 blue2" style="left:10%;top:10%"></div>
-    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:12%"></div>
+    <div class="circle450 blue3" style="left:55%;top:16.5%"></div>
+    <div class="circle250 blue1" style="left:72%;top:9.5%"></div>
+    <div class="circle675 blue2" style="left:10%;top:9.5%"></div>
+    <div class="frame" style="height:600px; width:880px; left:50%;margin-left:-440px;top:11.5%"></div>
 
-    <div class="dotdotdot" style="top:28.7%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:27.4%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -33,12 +33,12 @@
       <div class="dot"></div>
     </div>
 
-    <div class="circle400 blue2" style="left:3%;top:29.5%"></div>
-    <div class="circle300 blue3" style="left:3%;top:35%"></div>
-    <div class="circle150 blue1" style="left:40%;top:37.5%"></div>
-    <div class="frame" style="height:350px; width:530px; left:6%;top:32%"></div>
+    <div class="circle400 blue2" style="left:3%;top:28.1%"></div>
+    <div class="circle300 blue3" style="left:3%;top:33.7%"></div>
+    <div class="circle150 blue1" style="left:40%;top:36.1%"></div>
+    <div class="frame" style="height:350px; width:530px; left:6%;top:30.6%"></div>
 
-    <div class="dotdotdot" style="top:44%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:42%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -46,22 +46,22 @@
       <div class="dot"></div>
     </div>
 
-    <div class="circle300 blue3" style="right:27%;top:53%"></div>
-    <div class="circle400 blue2" style="right:3%;top:47%"></div>
-    <div class="circle150 blue1" style="right:40%;top:47.5%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:49.3%"></div>
+    <div class="circle300 blue3" style="right:27%;top:49.5%"></div>
+    <div class="circle400 blue2" style="right:3%;top:43.5%"></div>
+    <div class="circle150 blue1" style="right:40%;top:44%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:45.8%"></div>
 
-    <div class="circle300 blue3" style="left:33%;top:66%"></div>
-    <div class="circle400 blue2" style="left:3%;top:61%"></div>
-    <div class="circle150 blue1" style="left:6%;top:69%"></div>
-    <div class="frame" style="height:350px; width:530px; left:8%;top:63.3%"></div>
+    <div class="circle300 blue3" style="left:33%;top:62%"></div>
+    <div class="circle400 blue2" style="left:3%;top:57%"></div>
+    <div class="circle150 blue1" style="left:6%;top:65%"></div>
+    <div class="frame" style="height:350px; width:530px; left:8%;top:60.3%"></div>
 
-    <div class="circle400 blue2" style="right:3%;top:77.3%"></div>
-    <div class="circle300 blue3" style="right:3%;top:74%"></div>
-    <div class="circle150 blue1" style="right:40%;top:82%"></div>
-    <div class="frame" style="height:350px; width:530px; left:52%;top:76.5%"></div>
+    <div class="circle400 blue2" style="right:3%;top:74.3%"></div>
+    <div class="circle300 blue3" style="right:3%;top:71%"></div>
+    <div class="circle150 blue1" style="right:40%;top:73%"></div>
+    <div class="frame" style="height:350px; width:530px; left:52%;top:73.5%"></div>
 
-    <div class="dotdotdot" style="top:88.5%;left:50%;margin-left:-55px">
+    <div class="dotdotdot" style="top:84.7%;left:50%;margin-left:-55px">
       <div class="dot"></div>
       <div style="padding-left:25px;float:left;position:inline-block">&nbsp</div>
       <div class="dot"></div>
@@ -69,13 +69,10 @@
       <div class="dot"></div>
     </div>
 
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:850px;width:81px;">
-			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
-		</div>
-		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:730px;width:73px;">
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:860px;width:81px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
 		</div>
-    <div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:440px;width:160px;">
+		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:660px;width:73px;">
       <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
       <div class="dropdown-content blue2" style="left:-10px; top:40px">
         <a href="#">mechanical</a>
@@ -84,7 +81,7 @@
         <a href="#">software</a>
       </div>
 		</div>
-		<div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:280px;width:160px;">
+    <div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:420px;width:160px;">
       <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
       <div class="dropdown-content blue2" style="left:-10px; top:40px">
         <a href="#">sprint 1</a>
@@ -93,6 +90,9 @@
         <a href="#">sprint 4</a>
         <a href="#">budget</a>
       </div>
+		</div>
+		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:250px;width:160px;">
+      <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
 		</div>
 		<div class="Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:175px;width:110px;">
 			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
@@ -106,47 +106,48 @@
 			<p class="pstyle1"><span class="cstyle0">Portabraille</span>, a portable braille printer!</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:31.9531%;left:56.6751%;width:36.7854%;">
+		<div class="Layer_1 aiAbs" style="top:30.2%;left:56.6751%;width:36.7854%;">
 			<p class="pstyle2">We created the Portabraille Printer with those who are visually impaired in mind.</p>
 			<p>&nbsp;</p>
 			<p>Insert info about user testing and any features we designed with those who are visually impaired in mind (eg: interface, portability, etc)</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:47.9413%;right:55.6748%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:44.5%;right:55.6748%;width:38.691%;">
 			<p class="pstyle3">The Portabraille Printer takes in a text file, converts it to braille, and embosses a sheet of paper with the converted braille.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle4">First, users input their file via a USB port. *insert info about how the text-to-braille software works and probably a bit about the interface too, try to keep it simple and elaborate later in the blog*</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:63.1127%;left:59.0617%;width:36.7854%;">
+		<div class="Layer_1 aiAbs" style="top:60%;left:59.0617%;width:36.7854%;">
 			<p>Next, the printer *insert info about how the firmware works, also insert info about the mechanical design*</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:77.2803%;right:56.2706%;width:38.691%;">
+		<div class="Layer_1 aiAbs" style="top:73.9803%;right:56.2706%;width:38.691%;">
 			<p class="pstyle4">Finally, the Portabraille Printer spits out a page of freshly printed braille, ready for the reading!</p>
 			<p>&nbsp;</p>
 			<p class="pstyle4">For a more technical overview of what the printer does and how we built it, head to our blog here.</p>
 		</div>
 
-		<div class="Layer_1 aiAbs" style="top:92.475%;left:50%;margin-left:-36.2055%;width:72.4109%;">
+		<div class="Layer_1 aiAbs" style="top:87.7%;left:50%;margin-left:-36.2055%;width:72.4109%;">
 			<p class="pstyle5">This project was created as part of Principles of Engineering, a course at Olin College of Engineering in Needham, MA. </p>
-			<p class="pstyle5">*insert thank-yous/credits*</p>
+      <p>&nbsp</p>
+      <p class="pstyle5">Thanks to the Fall 2019 Principles of Engineering Teaching Team, Professors Aaron Hoover, Amon Millner, Siddhartan Govindasamy and Stan Reifel for their support and assistance throughout this process. Additionally, thank you to the Visually Impaired and Blind User Group for hosting us and letting us pick their brains regarding our printer and braille in general.</p>
 		</div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
   		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:9.4243%;width:81px;">
-  			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
-  		</div>
-      <div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:22%;width:81px;">
   			<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/instructions.html">instructions</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:40%;width:73px;">
+      <div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:27%;width:81px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/system.html">system</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:54%;width:160px;">
-        	<a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:42%;width:73px;">
+        <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
   		</div>
-  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:68%;width:133px;">
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:57%;width:160px;">
+          <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/blog.html">blog</a>
+  		</div>
+  		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:69%;width:133px;">
         <a style="text-decoration:none" class="tabs" href="https://maiam6242.github.io/braille-printer/resources.html">resources</a>
   		</div>
   		<div class="Layer_1 aiAbs aiPointText" style="top:4460px;margin-top:-17.5px;left:85%;width:110px;">
