--- a/system.html
+++ b/system.html
@@ -71,7 +71,7 @@
 		</div>
 
     <div class="Layer_1 aiAbs" style="top:65%;left:49.9236%;margin-left:-32.6429%;width:65.2858%;">
-      <p class="pstyle1">stuff about the system overview blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blah blahv blah blah blah blah blah blah blah blah blah</p>
+      <p class="pstyle1">The Portabraille Printer is a device that takes in an English text input, translates that text into uncontracted braille, then prints said braille text on braille paper. It is a low cost product that aims to allow people who are visually impaired to create braille quickly, with applications ranging from producing quick meeting notes to creating accessible promotional materials on the fly. The printer is light, with handles for easy transportation, and has an easy-to-use interface with both braille and English text, creating a user friendly experience for those who are visually impaired or blind. Text documents can be fed to the printer via either the Portabraille Portal on the Portabraille Network or by plugging in a USB.</p>
     </div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
