--- a/instructions.html
+++ b/instructions.html
@@ -81,7 +81,7 @@
 		<div class="Layer_1 aiAbs" style="top:39.7253%;left:10.3064%;width:79.2046%;">
 			<p class="pstyle2">Next, you&rsquo;ll need to you&rsquo;ll need to upload a file to the printer. </p>
 			<p>&nbsp;</p>
-			<p class="pstyle3">You can do this manually or wirelessly. If you&rsquo;d like to manually upload your file, insert a flash drive with the file into the printer USB port (insert location), then use the [PLAY/PAUSE] button on the interface to toggle through and select your file. If you&rsquo;d like to wirelessly upload your file, connect your device to the Portabraille Wi-Fi network, then use the Portabraille Portal interface to upload and submit your file. </p>
+			<p class="pstyle3">You can do this manually or wirelessly. If you&rsquo;d like to manually upload your file, insert a flash drive with the file into the printer USB port (insert location), then use the [PLAY/PAUSE] button on the interface to toggle through and select your file. If you&rsquo;d like to wirelessly upload your file, you need to connect your device to the Portabraille Wi-Fi network. The password is <b>TeamDotDotDot!</b> and you can connect to the network like you would any other new wifi network. Usually, this means going into your wifi settings and selecting the Portabraille network. Once you are on the network, to get to the Portabraille Portal interface, type <b>10.3.141.1:5000</b> into your browser search bar. In the portal, you can upload and submit your text file! </p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:54.9415%;right:55.4684%;width:38.691%;">
 			<p class="pstyle4">Almost ready!  Prepare your paper and check the READY TO PRINT indicator.</p>
@@ -91,9 +91,9 @@
 		<div class="Layer_1 aiAbs" style="top:77.6465%;left:10.3064%;width:79.2046%;">
 			<p class="pstyle2">Finally, hit the PLAY button to get your print started!</p>
 			<p>&nbsp;</p>
-			<p class="pstyle3">Get ready for some beautiful braille! However, if there&rsquo;s a problem with your print, hit the CANCEL button to completely stop it, or the PLAY/PAUSE button to pause and then restart the print.</p>
+			<p class="pstyle3">Get ready for some beautiful braille! However, if there&rsquo;s a problem with your print, hit the CANCEL button to completely stop it, or the PLAY/PAUSE button to pause and then start the print where you left off.</p>
 			<p>&nbsp;</p>
-			<p class="pstyle3">The Portabraille Printer also has an ERROR indicator LED and a READY TO PRINT indicator LED, located in the top corners of the interface. These indicators play noises, but if you&rsquo;d prefer a more quiet printing experience, change the toggle switch at the bottom of the interface to SOUND OFF instead of SOUND ON.</p>
+			<p class="pstyle3">The Portabraille Printer also has an ERROR indicator LED and a READY TO PRINT indicator LED, located in the top corners of the interface. Anytime you interact with the printer, it plays a noise to confirm your command, but if you&rsquo;d prefer a more quiet printing experience, change the toggle switch at the bottom of the interface to SOUND OFF instead of SOUND ON.</p>
 		</div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
