--- a/team.html
+++ b/team.html
@@ -99,7 +99,7 @@
 		</div>
 		<div class="Layer_1 aiAbs" style="top:30%;left:58.198%;width:29.4118%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2"><span class="cstyle0">Megan</span> is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
+			<p class="pstyle2"><span class="cstyle0">Megan</span> Ku is an electrical and computer engineering student who fueled her late nights in the POE room through the consumption of Dove chocolate. She focused heavily on the development of the PCB and electronic interface, but more importantly, she was chief DJ and t-shirt printer.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:52%;left:9.8935%;width:29.4118%;">
 			<p>&nbsp;</p>
@@ -107,7 +107,7 @@
 		</div>
 		<div class="Layer_1 aiAbs" style="top:52%;left:58.5435%;width:29.4118%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2"><span class="cstyle0">Maia </span>is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
+			<p class="pstyle2"><span class="cstyle0">Maia </span> Materman is an engineering with computing student who loves walking, applesauce, and fish on feet! She wrote all the things that make the printer read your files and then turn those files into braille. She credits all her work this project to soft new age piano music, huge monitors, great teammates, and dry pasta. </p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:74%;left:35.478%;width:29.4118%;">
 			<p>&nbsp;</p>
