--- a/process.html
+++ b/process.html
@@ -48,10 +48,10 @@
     <div class="dropdown Layer_1 aiAbs aiPointText" style="top:142px;margin-top:-17.5px;right:420px;width:160px;">
       <a style="text-decoration:none; padding-bottom:10px;" class="tabs" href="https://maiam6242.github.io/braille-printer/process.html">process</a>
       <div class="dropdown-content blue2" style="left:-10px; top:40px">
-        <a href="#">sprint 1</a>
-        <a href="#">sprint 2</a>
-        <a href="#">sprint 3</a>
-        <a href="#">sprint 4</a>
+        <a href="https://maiam6242.github.io/braille-printer/sprint1.html">sprint 1</a>
+        <a href="https://maiam6242.github.io/braille-printer/sprint2.html">sprint 2</a>
+        <a href="https://maiam6242.github.io/braille-printer/sprint3.html">sprint 3</a>
+        <a href="https://maiam6242.github.io/braille-printer/sprint4.html">sprint 4</a>
         <a href="#">budget</a>
       </div>
 		</div>
@@ -73,13 +73,13 @@
 		</div>
 
     <div style="position:absolute;top:70%;left:50%;margin-left:-500px">
-      <a style="text-decoration:none" class="btn" href="#">sprint 1!</a>
+      <a style="text-decoration:none" class="btn" href="https://maiam6242.github.io/braille-printer/sprint1.html">sprint 1!</a>
       <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
-      <a style="text-decoration:none" class="btn" href="#">sprint 2!</a>
+      <a style="text-decoration:none" class="btn" href="https://maiam6242.github.io/braille-printer/sprint2.html">sprint 2!</a>
         <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
-      <a style="text-decoration:none" class="btn" href="#">sprint 3!</a>
+      <a style="text-decoration:none" class="btn" href="https://maiam6242.github.io/braille-printer/sprint3.html">sprint 3!</a>
         <div style="padding-left:40px;float:left;position:inline-block">&nbsp</div>
-      <a style="text-decoration:none" class="btn" href="#">sprint 4!</a>
+      <a style="text-decoration:none" class="btn" href="https://maiam6242.github.io/braille-printer/sprint4.html">sprint 4!</a>
     </div>
 
     <a style="text-decoration:none;position:absolute;top:79%;left:50%;margin-left:-110px" class="btn" href="#">budget!</a>
