--- a/sprint2.html
+++ b/sprint2.html
@@ -106,7 +106,7 @@
 
 		<div class="Layer_1 aiAbs" style="top:4.2%;left:5.727%;width:32.7258%;">
 			<p>&nbsp;</p>
-			<p class="pstyle0">During Sprint 2, our goal was to [goals goals goals]</p>
+			<p class="pstyle0">During Sprint 2, our goal was to have a basic minimum viable product, or at least to have a minimum of every subsystem, even if they were not integrated.</p>
 			<p>&nbsp;</p>
 			<p class="pstyle1">Brief summary of what we did</p>
 		</div>
