adding design component to sprints, updating team page formatting, adding links for resources

--- a/resources.html
+++ b/resources.html
@@ -74,31 +74,31 @@
 
 		<div class="Layer_1 aiAbs" style="top:33.0506%;left:13.5898%;width:78.8732%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2">Visually Impaired and Blind User Group</p>
+			<a class="pstyle2" href="http://www.vibug.org/">Visually Impaired and Blind User Group</a>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:39.5506%;left:13.8049%;width:79.4532%;">
-			<p>a line or two about this resource and maybe if there&rsquo;s room how we used this resource or whatever we&rsquo;d like to put</p>
+			<p>VIBUG is a Massachusetts-based group that serves blind and visually impaired users of computers and assistive technology. They gave us a lot of useful feedback about our printer!</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:48.2661%;left:13.5898%;width:78.8732%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2">Braille Authority of North America Standards</p>
+			<a class="pstyle2" href="http://www.brailleauthority.org/sizespacingofbraille/sizespacingofbraille.pdf">Braille Authority of North America Standards</a>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:54.7661%;left:13.8049%;width:79.4532%;">
-			<p>a line or two about this resource and maybe if there&rsquo;s room how we used this resource or whatever we&rsquo;d like to put</p>
+			<p>Braille follows strict standards, so we relied a lot on reference sheets like this one from the Braille Authority of North America to get information about braille dimensions.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:63.4321%;left:13.5898%;width:78.8732%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2">Braille Cell Dimensions</p>
+			<a class="pstyle2" href="http://www.arch.mcgill.ca/prof/klopp/arch678/fall2008/3%20Student%20exchange/Team%20Surface/Connexion%20Surface%20Folder/MA%20files/Braille%20cell%20dimensions.pdf">Braille Cell Dimensions</a>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:69.9321%;left:13.8049%;width:79.4532%;">
-			<p>a line or two about this resource and maybe if there&rsquo;s room how we used this resource or whatever we&rsquo;d like to put</p>
+			<p>This reference sheet, from McGill University in Canada, provides more details about braille dimensions within each cell.</p>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:79.1433%;left:13.5898%;width:78.8732%;">
 			<p>&nbsp;</p>
-			<p class="pstyle2">Another Resource</p>
+			<a class="pstyle2" href="https://carroll.org/">Carroll Center for the Blind</a>
 		</div>
 		<div class="Layer_1 aiAbs" style="top:85.6433%;left:13.8049%;width:79.4532%;">
-			<p>a line or two about this resource and maybe if there&rsquo;s room how we used this resource or whatever we&rsquo;d like to put</p>
+			<p>The Carroll Center provides services to those who are blind or visually impaired. We talked with them to get a better idea of what would be useful to those who are visually impaired!</p>
 		</div>
 
     <div style="width:1000px;left:50%;margin-left:-500px">
