--- a/team.html
+++ b/team.html
@@ -31,17 +31,17 @@
     <div class="circle350 blue2" style="left:4%;top:22.5%"></div>
     <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:21.8%"></div>
 
-    <div class="circle175 blue3" style="right:8%;top:20%"></div>
-    <div class="circle350 blue1" style="right:23%;top:22.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; right:12.7%;top:21.8%"></div>
+    <div class="circle175 blue3" style="right:5%;top:20%"></div>
+    <div class="circle350 blue1" style="right:20%;top:22.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; right:9.7%;top:21.8%"></div>
 
     <div class="circle175 blue2" style="left:28.5%;top:42%"></div>
     <div class="circle350 blue1" style="left:4%;top:44.5%"></div>
     <div class="frame" style="height:280px; width:28.5%; left:9.5%;top:43.8%"></div>
 
-    <div class="circle175 blue1" style="right:8%;top:42%"></div>
-    <div class="circle350 blue3" style="right:23%;top:44.5%"></div>
-    <div class="frame" style="height:280px; width:28.5%; right:12.7%;top:43.8%"></div>
+    <div class="circle175 blue1" style="right:5%;top:42%"></div>
+    <div class="circle350 blue3" style="right:20%;top:44.5%"></div>
+    <div class="frame" style="height:280px; width:28.5%; right:9.7%;top:43.8%"></div>
 
     <div class="circle175 blue3" style="right:30%;top:64%"></div>
     <div class="circle350 blue2" style="left:28.5%;top:66.5%"></div>
@@ -93,23 +93,23 @@
 			<p>&nbsp;</p>
 			<p class="pstyle1">*insert other info about the team?*</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:30%;left:9.5479%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:30%;left:3.5479%;width:40%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Colin</span> is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:30%;left:58.198%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:30%;right:3.5479%;width:40%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Megan</span> Ku is an electrical and computer engineering student who fueled her late nights in the POE room through the consumption of Dove chocolate. She focused heavily on the development of the PCB and electronic interface, but more importantly, she was chief DJ and t-shirt printer.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:52%;left:9.8935%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:52%;left:3.5479%;width:40%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Nathan </span>is a person who has many interests and will write his own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about his identity as an engineer/designer/person in the world.</p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:52%;left:58.5435%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:52%;right:3.5479%;width:40%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Maia </span> Materman is an engineering with computing student who loves walking, applesauce, and fish on feet! She wrote all the things that make the printer read your files and then turn those files into braille. She credits all her work this project to soft new age piano music, huge monitors, great teammates, and dry pasta. </p>
 		</div>
-		<div class="Layer_1 aiAbs" style="top:74%;left:35.478%;width:29.4118%;">
+		<div class="Layer_1 aiAbs" style="top:74%;left:50%;margin-left:-19%;width:40%;">
 			<p>&nbsp;</p>
 			<p class="pstyle2"><span class="cstyle0">Annie</span> is a person who has many interests and will write her own bio later probably. It&rsquo;ll be a few lines long and full of juicy details about her identity as an engineer/designer/person in the world.</p>
 		</div>
